add some more initial data